remove: empty css module files fix: spacing for footer, HTML error for experinceCard add: project page and 2 projects

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,12 +5,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 1000px;
+  max-width: 800px;
   margin: 0 auto;
 }
 
 .title a {
   color: #0070f3;
+  text-decoration: none;
+}
+
+.noDecor {
+  align-items: center;
+  color: #0070f3;
+  display: inline-flex;
   text-decoration: none;
 }
 
@@ -43,12 +50,28 @@
 
 .grid {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
 
   max-width: 800px;
   margin-top: 3rem;
+}
+
+.gridFlex {
+  display: flex;
+  flex-direction: column;
+}
+
+.grid img {
+  align-self: center;
+}
+
+button.gitHubButton {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
 }
 
 .card {
@@ -87,4 +110,24 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+.cardContent {
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+@media (max-width: 600px) {
+  .cardContent {
+    flex-direction: column;
+  }
+}
+
+.cardOutline {
+  margin: 0.5rem auto;
+}
+
+.footer {
+  padding-top: 2rem;
 }
